--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,8 @@
 {
   "extends": ["@rocketseat/eslint-config/node"],
-  "rules": { "camelcase": "off", "no-useless-constructor": "off" }
+  "rules": {
+    "camelcase": "off",
+    "no-useless-constructor": "off",
+    "@typescript-eslint/no-unused-vars": "off"
+  }
 }
