--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -17,13 +19,15 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.5.4",
+    "@vitest/coverage-v8": "2.1.2",
+    "@vitest/ui": "2.1.2",
     "eslint": "8.57.0",
     "prisma": "5.19.1",
     "tsup": "8.2.4",
     "tsx": "4.19.0",
     "typescript": "5.5.4",
     "vite-tsconfig-paths": "4.0.5",
-    "vitest": "0.28.5"
+    "vitest": "2.1.2"
   },
   "dependencies": {
     "@prisma/client": "5.19.1",
