--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@vitest/coverage-v8": "2.1.2",
     "@vitest/ui": "2.1.2",
     "eslint": "8.57.0",
-    "prisma": "5.19.1",
+    "prisma": "^5.22.0",
     "tsup": "8.2.4",
     "tsx": "4.19.0",
     "typescript": "5.5.4",
@@ -30,7 +30,7 @@
     "vitest": "2.1.2"
   },
   "dependencies": {
-    "@prisma/client": "5.19.1",
+    "@prisma/client": "^5.22.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.13",
     "dotenv": "16.4.5",
