--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,9 @@
 {
-  "extends": ["@rocketseat/eslint-config/node"],
+  "extends": [
+    "@rocketseat/eslint-config/node"
+  ],
   "rules": {
     "camelcase": "off",
-    "no-useless-constructor": "off",
-    "@typescript-eslint/no-unused-vars": "off"
+    "no-useless-constructor": "off"
   }
 }
