--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "vitest": "2.1.2"
   },
   "dependencies": {
+    "@fastify/jwt": "^9.0.2",
     "@prisma/client": "^5.22.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.13",
     "dotenv": "16.4.5",
-    "fastify": "4.28.1",
+    "fastify": "^5.2.0",
     "zod": "3.23.8"
   }
 }
