--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@vitest/coverage-v8": "2.1.2",
     "@vitest/ui": "2.1.2",
     "eslint": "8.57.0",
-    "prisma": "^5.22.0",
+    "prisma": "6.5.0",
     "tsup": "8.2.4",
     "tsx": "4.19.0",
     "typescript": "5.5.4",
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@fastify/jwt": "^9.0.2",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "6.5.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.13",
     "dotenv": "16.4.5",
