--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "test:create-prisma-environment":"npm link ./prisma/vitest-environment-prisma",
-    "test:install-prisma-environment":"npm link vitest-environment-prisma",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
     "test": "vitest run --dir src/use-cases",
     "test:watch": "vitest --dir src/use-cases",
@@ -23,11 +23,13 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.5.4",
+    "@types/supertest": "6.0.3",
     "@vitest/coverage-v8": "2.1.2",
     "@vitest/ui": "2.1.2",
     "eslint": "8.57.0",
     "npm-run-all": "4.1.5",
     "prisma": "6.5.0",
+    "supertest": "7.1.0",
     "tsup": "8.2.4",
     "tsx": "4.19.0",
     "typescript": "5.5.4",
