--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vitest": "2.1.2"
   },
   "dependencies": {
+    "@fastify/cookie": "11.0.2",
     "@fastify/jwt": "^9.0.2",
     "@prisma/client": "6.5.0",
     "bcryptjs": "2.4.3",
